--- a/style.scss
+++ b/style.scss
@@ -18,9 +18,9 @@ html {
 }
 
 body {
-	background-image: <img src="https://m.mimonaija.com/wp-content/uploads/2018/09/EPL-VIDEO-Manchester-United-vs-Tottenham-Hotspur-0-3-2018-All-Goals-Highlights.jpg" alt="Image result for tottenham hotspur"/>;
+	background-colour: $lightblue
   font: 18px/1.4 $helvetica;
-  color: $darkGray;
+  color: $DodgerBlue;
 }
 
 .container {
