--- a/style.scss
+++ b/style.scss
@@ -19,7 +19,7 @@ html {
 
 body {
 	background-colour: $lightblue
-  font: 18px/1.4 $helvetica;
+  font; 18px/1.4 $helvetica;
   color: $DodgerBlue;
 }
 
